# trackhealth-os

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api-contract.md
docs/adr/: 0001-self-hosted-open-source.md  0002-single-user-sqlite.md  0003-fastapi-monolith.md  0004-react-minimal-svg-charts.md  0005-no-inapp-auth-network-perimeter.md  0006-token-encrypted-at-rest.md  0007-inprocess-scheduler-poll-only.md  0008-docker-first-distribution.md  0010-license-agpl.md  0011-store-interface-registry-driven.md  0012-backend-contract-data-api.md
tests/: test_app.py  test_crypto.py  test_registry.py
tests/api/: test_backfill_route.py  test_routes.py  test_schemas.py  test_static_web.py
tests/fixtures/contract/: metrics.json  readings.json  series.json  state.json
tests/fixtures/garmin/: activities_recent.json  activities_week.json  fitness_age.json  (+6 more)
tests/garmin/: test_auth.py  test_backfill.py  test_parsers.py  test_pull.py
tests/store/: test_contract.py
tests/sync/: test_engine.py  test_engine_backfill.py
trackhealth/: config.py  crypto.py
trackhealth/api/: app.py  routes.py  schedule.py  schemas.py
trackhealth/garmin/: __init__.py  auth.py  parsers.py  pull.py
trackhealth/metrics/: __init__.py  registry.py
trackhealth/store/: __init__.py  interface.py  sqlite.py
trackhealth/sync/: __init__.py  engine.py
web/: .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  tokens.css
(+6 files in other folders)
