[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trackhealth"
version = "0.0.0"
description = "Self-hosted single-user Dashboard for Garmin Connect data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
dependencies = [
    "cryptography",
    "fastapi",
    "garminconnect",
    "pydantic>=2",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["trackhealth"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
